--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Net/Level/Lv_Lobby.Lv_Lobby
-EditorStartupMap=/Game/Net/Level/Lv_Lobby.Lv_Lobby
+EditorStartupMap=/Game/Net/Maps/BattleMap.BattleMap
 GlobalDefaultGameMode="/Script/NetTPS.NetTPSGameMode"
 GameInstanceClass=/Script/NetTPS.NetGameInstance
 
